Some fixes. Weather for instance

--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher-mobile.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher-mobile.html
@@ -261,7 +261,7 @@
               <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
               <div><content id="toolbar" select="[toolbar]"></content></div>
             </paper-toolbar>
-            <div> Main content... </div>
+            <div> <a href="http://192.168.112.52:8080/">Login</a> </div>
           </paper-header-panel>
         </paper-drawer-panel>
 
