--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -141,8 +141,8 @@
       }
 
       [hidden] {
-        visibility: hidden; !important;
-        display: none; !important;
+        visibility: hidden !important;
+        display: none !important;
       }
 
       #workspace {
@@ -154,7 +154,7 @@
       launcher-search {
         margin-left: 10px;
       }
-      
+
     </style>
 </head>
 <body is="launcher-main" class="loading">
