--- a/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
@@ -42,8 +42,8 @@
         </div>
         <div style="padding-top: 50px;display:flex;justify-content:center;">
 
-          <div style="padding:20px;background-color:rgba(255,255,255,.5);border-radius:5px;">
-            <iframe src="https://www.meteoblue.com/en/weather/widget/three?geoloc=detect&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=bright"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 460px;height: 593px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a href="https://www.meteoblue.com/en/weather/forecast/week?utm_source=weather_widget&utm_medium=linkus&utm_content=three&utm_campaign=Weather%2BWidget" target="_blank">meteoblue</a></div>
+          <div style="padding:20px;background-color:rgba(255,255,255,.5);border-radius:5px;transform:scale(.75,.75)">
+            <iframe src="https://www.meteoblue.com/en/weather/widget/three?geoloc=detect&days=4&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&layout=bright"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 460px;height: 593px"></iframe><div><!-- DO NOT REMOVE THIS LINK --><a style="display:none;" href="https://www.meteoblue.com/en/weather/forecast/week?utm_source=weather_widget&utm_medium=linkus&utm_content=three&utm_campaign=Weather%2BWidget" target="_blank">meteoblue</a></div>
           </div>
 
         </div>
