removed more unused code and files

--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher.html
@@ -309,12 +309,13 @@
           </div>
         </div>
 
+<!--
         <div id="layout-editor">
           <content select="[layouteditor]"></content>
         </div>
 
         <launcher-hot-key keys="Ctrl+E" on-keypress="toggleEditor"></launcher-hot-key>
-        <launcher-hot-key keys="Esc" on-keypress="closeEditor"></launcher-hot-key>
+        <launcher-hot-key keys="Esc" on-keypress="closeEditor"></launcher-hot-key>-->
 
 
         <iron-media-query query="(min-width: 0px ) and ( max-width: 400px)" query-matches="{{layoutMicro}}"></iron-media-query>
