--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -145,9 +145,9 @@
             <h4>Connection error</h4>
             <p>You have been disconnected from server. Please reload page.</p>
             <div class="buttons">
-                <button class="btn btn-sm btn-default" dialog-dismiss>Close</button>
+                <paper-button dialog-dismiss>Close</paper-button>
                 <span>&nbsp;</span>
-                <button class="btn btn-sm btn-primary" dialog-confirm onclick="window.location = window.location.href;">Reload</button>
+                <paper-button dialog-confirm onclick="window.location = window.location.href;">Reload</paper-button>
             </div>
         </paper-dialog>
 
@@ -190,6 +190,22 @@
     <starcounter-debug-aid></starcounter-debug-aid>
     <script>
         var puppet = document.getElementsByTagName("puppet-client")[0];
+        //Ugly hack to customize the color of the error drop-down which is displayed by puppet.
+        var shadowChildren = puppet.shadowRoot.children;
+        //Adding custom style to puppet style object.
+        shadowChildren[0].innerHTML = shadowChildren[0].innerHTML + ".custom-notice  { background-color: #FFFFFF; border-color: #ffe070; color: #000;}";
+        for (let i = 0 ; i < shadowChildren.length; i++) {
+            if (shadowChildren[i].tagName == "DIV") {
+                var noticeDiv = shadowChildren[i].children;
+                for (let j = 0; j < noticeDiv.length; j++) {
+                    //remove current style for notice and add custom one.
+                    if (noticeDiv[j].classList.contains("notice")) {
+                        noticeDiv[j].classList.remove("notice");
+                        noticeDiv[j].classList.add("custom-notice");
+                    }
+                }
+            }
+        }
     </script>
 </body>
 </html>
