--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -134,7 +134,8 @@
 
       #workspace {
         position: relative;
-        overflow: auto;
+        overflow-x: auto;
+        overflow-y: hidden;
         flex:1;
       }
 
@@ -156,6 +157,9 @@
               <!-- menu is built inside toolbar -->
               <launcher-search search placeholder="Search here..." data="{{model.searchBar}}"></launcher-search>
               <template is="imported-template" content$="{{model.user.LauncherLayoutInfo.MergedHtml}}" model="{{model.user}}"></template>
+              <co-icon-button-menu icon="ellipsis-v" size="18" style="font-size: 15px;">
+                   <template is="imported-template" content$="{{model.topbarRightMenu.LauncherLayoutInfo.MergedHtml}}" model="{{model.topbarRightMenu}}"></template>
+              </co-icon-button-menu>
           </co-launcher-toolbar>
 
         <div main>
