--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -153,13 +153,10 @@
     <template id="root-launcher-dom-bind" is="dom-bind">
       <co-title value="[[model.Title]]"></co-title>
       <co-launcher only-workspace="[[!model.signedIn]]" cp-auto-visible=[[model.contextpanelAutoVisible]]>
-          <co-launcher-toolbar toolbar class="launcher-toolbar launcher-topbar" menu="{{model.menu}}" topbarmenu="{{model.topbarRightMenu}}">
+          <co-launcher-toolbar toolbar class="launcher-toolbar launcher-topbar" menu="{{model.menu}}" rightmenu="{{model.topbarRightMenu}}">
               <!-- menu is built inside toolbar -->
               <launcher-search search placeholder="Search here..." data="{{model.searchBar}}"></launcher-search>
               <template is="imported-template" content$="{{model.user.LauncherLayoutInfo.MergedHtml}}" model="{{model.user}}"></template>
-              <co-icon-button-menu icon="ellipsis-v" size="18" style="font-size: 15px;">
-                   <template is="imported-template" content$="{{model.topbarRightMenu.LauncherLayoutInfo.MergedHtml}}" model="{{model.topbarRightMenu}}"></template>
-              </co-icon-button-menu>
           </co-launcher-toolbar>
 
         <div main>
@@ -206,7 +203,6 @@
                     template.set("model.ConnectionError", true);
                 });
             });
-
         })();
     </script>
 
