--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -134,8 +134,7 @@
 
       #workspace {
         position: relative;
-        overflow-x: auto;
-        overflow-y: hidden;
+          overflow: auto;
         flex:1;
       }
 
