--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher-toolbar.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher-toolbar.html
@@ -154,7 +154,7 @@
         </style>
         <div id="logoMenu">
             <co-spinner id="logospinner"></co-spinner>
-            <co-logo id="largeLogo" on-tap="logoTapped"></co-logo>
+            <co-logo class="dimhover" id="largeLogo" on-tap="logoTapped"></co-logo>
 
             <ul id="menu">
                 <template launcher-menu is="imported-template" content$="{{menu.LauncherLayoutInfo.MergedHtml}}" model="{{menu}}">
