--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher.html
@@ -238,6 +238,7 @@
 
             #contextPanel {
               transition: width 0.2s ease;
+			  @apply --context-panel-styles;
             }
             #contextPanel.minimized #widthtracker {
               visibility: collapse;
