Fixed custom logo

--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher-toolbar.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-launcher-toolbar.html
@@ -57,6 +57,7 @@
                 min-width: 25px;
                 height: 25px;
                 min-height: 25px;
+                @apply --largeLogo-remove-style;
             }
 
             /* Menu LARGE */
@@ -152,6 +153,7 @@
                 left: -5px;
                 opacity: .9;
                 pointer-events: none;
+                @apply --spinner-remove-style;
             }
         </style>
         <div id="logoMenu">
